<resources>
    <string name="app_name">WEC 2017</string>
    <string name="action_settings">Settings</string>
    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>
    <string name="profile_me">My profile pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="msg_fragment">Messages coming soon</string>
    <string name="comp_fragment">Competition info</string>
    <string name="stream_fragment">Stream</string>
    <string name="action_logout">Log out</string>
    <string name="post">Post</string>
    <string name="toolbar_title">WESST</string>
    <string name="not_specified">Not specified</string>

    <string name="fullname_label">Full name:</string>
    <string name="school_label">School:</string>
    <string name="title_label">Title:</string>
    <string name="email_label">Email:</string>
    <string name="gender_label">Gender:</string>
    <string name="info_label">Info:</string>
    <string name="phone_label">Phone:</string>
    <string name="date_label">Birthday:</string>
    <string name="comment">Comment</string>

    <string-array name="school_name_array">
        <item>SFU Burnaby</item>
        <item>SFU Surrey</item>
        <item>UBC Vancouver</item>
        <item>UBC Okanagan</item>
        <item>UVic A</item>
        <item>UVic B</item>
        <item>BCIT</item>
        <item>U of A</item>
        <item>U of C</item>
        <item>U of M</item>
        <item>UNBC</item>
        <item>U of R</item>
        <item>U of S</item>
    </string-array>
    <string-array name="year_array">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>nth</item>
    </string-array>

    <string name="edit_profile">Edit profile</string>
    <string name="save_profile">Save</string>

    <string name="title_activity_new_post">New post</string>
    <string name="title_activity_edit_profile">Edit profile</string>
<string name="title_activity_edit_user_photo">Edit user image</string>
</resources>
