<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android='http://schemas.android.com/apk/res/android'
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername"
        android:gravity="top"
        android:hint="@string/username_hint"
        android:imeOptions="actionSend"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/etPassword"
        android:gravity="top"
        android:hint="@string/password_hint"
        android:imeOptions="actionSend"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btLogin"
            android:text="@string/login"
            android:textSize="18sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btSignup"
            android:text="@string/signup"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>
